# pichip

./: .gitignore  README.md  analyze_stocks.py  config.yaml  pyproject.toml  run_viewer.py
openspec/changes/add-board-kline/: proposal.md  (+1 more)
pichip/: __init__.py  cli.py
pichip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pichip/analysis/: __init__.py  bottom_analysis.py  regression.py
pichip/control/: __init__.py  buy_signal.py  chip_concentration.py  control_index.py  independence.py  resistance.py  turnover_trend.py  volume_price_control.py
pichip/core/: matcher.py  normalize.py  stats.py  volume.py
pichip/data/: akshare_fetcher.py  cache.py  fetcher.py  filter.py  pytdx_fetcher.py
pichip/hot_board/: __init__.py  engine.py  fetcher.py  filters.py  scoring.py
pichip/hot_sector/: __init__.py  fetcher.py  filter.py
pichip/indicators/: __init__.py  chip_peak.py  control_index.py  divergence.py  macd.py
pichip/llm/: __init__.py  intent_parser.py  prompts.py  tools.py
pichip/output/: chart.py  display.py
pichip/pattern/: __init__.py  base.py  first_board.py  rebound_second_wave.py  rubbing_line.py  strong_second_wave.py
pichip/scan/: __init__.py  divergence.py  pullback.py
pichip/scheduler/: __init__.py  sync_job.py  verify_job.py
pichip/viewer/: __init__.py  app.py  charts.py  data_loader.py
tdx/: MACD四色.txt  README.md  主力控盘指数-板块.txt  主力控盘指数.tn6  主力控盘指数.txt  主力控盘选股.txt  主力操盘线.txt  主力操盘线_V8.2备份.txt  主力操盘线选股.txt  主力操盘线预警.txt  出货预警.txt  分时钓鱼线预警.txt  揉搓线选股.txt  板块资金动向.txt  涨停反弹二波选股.txt  筹码峰指标.txt  首板二波选股.txt
(+24 files in other folders)
